Newsletter form styling

--- a/privacy.html
+++ b/privacy.html
@@ -108,6 +108,8 @@
 
     <h3>Personal Information</h3>
     <p>We only collect personal information (e.g., email address) when you choose to provide it—such as subscribing to updates or contacting us.</p>
+    <h3>Newsletter Subscriptions</h3>
+    <p>When you subscribe to our newsletter, we collect your email address to send you updates and tips about Bitcoin. This data is processed securely via Formspree, our third-party email submission service. We do not store your email on our servers; it is handled directly by Formspree for subscription management.</p>
 
     <h2>2. Use of Cookies and Analytics</h2>
     <p>We use cookies and similar technologies to enhance functionality, remember your preferences, and analyze traffic. You can control cookies through your browser settings.</p>
@@ -125,6 +127,7 @@
     <h2>4. Third-Party Access</h2>
     <p>We may work with trusted service providers (e.g., email delivery or analytics) under strict confidentiality agreements. They are only allowed to use your information to perform the specific services we request.</p>
     <p>As detailed in our Cookies and Analytics section, we partner with privacy-focused providers like Umami (for anonymized analytics) and Feedback Fish (for voluntary user feedback) under these agreements. No data is sold or shared for advertising.</p>
+    <p>For newsletter subscriptions, we use Formspree to collect and process email addresses. Formspree acts as a data processor and handles submissions securely. Please review Formspree's privacy policy at <a href="https://formspree.io/legal/privacy-policy">https://formspree.io/legal/privacy-policy</a> for details on how they handle your data.</p>
 
     <h2>5. Data Security</h2>
     <p>We use industry-standard measures to protect your data. However, no method of transmission over the Internet is 100% secure.</p>
