--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 </div>  <!-- container -->
 <footer>
   <div class="newsletter-signup">
-    <h3>Get Bitcoin updates and tips in your inbox every month</h3>
+    <h3>Get Bitcoin updates and tips in your inbox every month.</h3>
     <form id="newsletter-form">
       <input type="email" id="newsletter-email" name="email" placeholder="you@your-email.com" required>
-      <button type="submit">Subscribe</button>
+      <button type="submit">Subscribe →</button>
     </form>
     <div id="newsletter-message" style="display:none;"></div>
     <div id="newsletter-sending" style="display:none;">Sending...</div>
