Newsletter styling + email address .js script removed

--- a/terms.html
+++ b/terms.html
@@ -119,7 +119,7 @@
     <p>We reserve the right to change or update these terms at any time. Updates will be posted on this page with a revised date.</p>
 
     <h2>Contact</h2>
-    <p>If you have any questions or concerns, please contact us at: <a href="mailto:#">name</a></p>
+    <p>If you have any questions or concerns, please contact us at: <a href="mailto:support&#64;buoybitcoin.com">support&#64;buoybitcoin.com</a></p>
   </main>
 
 
