--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
   <div class="container">
  <header>
   <div class="container">
-    <div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
+    <div id="logo"><a href="/"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
