Questionnaire.js, compare button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <section class="main-search">
   <div class="search-wrapper-main">
-    <input type="text" placeholder="Search services, wallets, or features..." id="main-search" autocomplete="off" />
+    <input type="text" placeholder="Search services, wallets, or tools..." id="main-search" autocomplete="off" />
     <button id="main-search-btn">
       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -208,8 +208,10 @@
         <div class="card"><img src="images/lightspark.svg" alt="lightspark" class="svg-icon"><span></span></div>
       </div>
     </section>
+
   </main>
 </div>  <!-- container -->
+
 <footer>
   <div class="newsletter-signup">
     <h3>Get Bitcoin updates and tips in your inbox every month.</h3>
@@ -259,6 +261,7 @@
     "description": "Buoy Bitcoin helps you compare reliable Bitcoin-only services quickly and easily. Find the best options for wallets, exchanges, and more."
   }
   </script>
+  <script src="js/questionnaire.js"></script>
   <script src="js/script.js?v=8"></script>
 </body>
 </html>
