--- a/terms.html
+++ b/terms.html
@@ -41,7 +41,7 @@
     <input type="text" placeholder="Search..." id="menu-search" />
     <div id="search-suggestions" class="search-suggestions"></div>
   </div>
-  <button id="search-btn">Search</button>
+  <button id="menu-compare-btn" class="compare-btn">compare</button>
 </div>
 
     <!-- Menu sections -->
