--- a/store-it-safely.html
+++ b/store-it-safely.html
@@ -113,8 +113,8 @@
     <div class="footer-column">
       <h3>Social</h3>
       <ul>
-        <li><a href="#">Nostr</a></li>
-		<li><a href="https://x.com/jaspervanderee">X</a></li>
+        <li><a href="https://snort.social/p/npub165w944kqt29hrt90l2ssc0rvmhf0u77dgezskknfnczr7r030v0s2g6kae" target="_blank">Nostr</a></li>
+		<li><a href="https://x.com/jaspervanderee" target="_blank">X</a></li>
         <li><a href="https://github.com/jaspervanderee/buoy" target="_blank">GitHub</a></li>
       </ul>
     </div>
