cleaned styles.css, updated about.html

--- a/about.html
+++ b/about.html
@@ -100,13 +100,13 @@
       <p>At <strong>Buoy</strong>, we guide new Bitcoin users through the world of Bitcoin-only services. Bitcoin represents freedom, fairness, and resilience in a world where traditional money is being devalued and controlled.</p>
 
       <h2>What We Do</h2>
-      <p>We compare wallets, exchanges, merchant tools, and more with clarity, transparency, and a focus on user choice, privacy, and sovereignty.</p>
+      <p>We compare wallets, exchanges, merchant tools, and more with clarity, transparency, and a focus on user choice, privacy, and sovereignty. Our goal is to help you find tools that align with Bitcoin's principles, like self-custody and decentralization, so you can escape the broken fiat system.</p>
 
       <h2>Our Vision</h2>
-      <p>We envision a world where people reclaim their financial freedom — where savings aren’t eroded by inflation and where individuals truly control their money.</p>
+      <p>We envision a world where people reclaim their financial freedom — where savings aren’t eroded by inflation and where individuals truly control their money. Bitcoin isn't just an asset; it's a protocol bounded by energy that reprices the world, creating exponential abundance as technology advances. In this future, everyone benefits from falling prices and rising productivity, without the need for endless debt and manipulation.</p>
 
       <h2>Why We Exist</h2>
-      <p>Bitcoin services can be overwhelming for beginners. We break it down and compare key elements like custody models, KYC, Lightning support, and fees — so you don’t have to.</p>
+      <p>Bitcoin services can be overwhelming for beginners. We break it down and compare key elements like custody models (do you control your keys?), KYC requirements (do you have to share personal info?), Lightning support (for fast, cheap payments), and fees—so you don’t have to. Most people are trapped in a system based on theft through inflation. Buoy helps you opt out by choosing Bitcoin-only tools that promote honesty, privacy, and real value creation.</p>
 
       <h2>What Sets Us Apart</h2>
       <ul>
