--- a/faq.html
+++ b/faq.html
@@ -117,7 +117,7 @@
           <p>No. Buoy is dedicated exclusively to Bitcoin and its ecosystem. We believe in staying focused on what makes Bitcoin unique.</p>
 
           <h2>Are the services you list safe to use?</h2>
-          <p>We provide key details like custody models, KYC requirements, and user reviews to help you assess each service. Ultimately, users should do their own due diligence before using any service.</p>
+          <p>We provide key details like custody models, KYC requirements, and user reviews to help you assess each service. Ultimately, users should do their own due diligence before using any service. Verify, don't trust.</p>
 
           <h2>How often do you update the service information?</h2>
           <p>We aim to keep our information up-to-date with the latest offerings, updates, and feedback from the Bitcoin community. If you spot outdated information, please let us know!</p>
@@ -126,7 +126,7 @@
           <p>Yes! We welcome suggestions. Use the contact form to share a service you'd like us to review and include.</p>
 
           <h2>How does Buoy make money?</h2>
-          <p>Currently, Buoy is a free tool for the community. We may explore sustainable revenue options like sponsorships or partnerships, but we will always prioritize neutrality and transparency.</p>
+          <p>Currently, Buoy is a free tool for the community. We may explore sustainable revenue options, but we will always prioritize neutrality and transparency.</p>
         </div>
       </section>
     </main>
