--- a/privacy.html
+++ b/privacy.html
@@ -43,6 +43,7 @@
   </div>
   <button id="menu-compare-btn" class="compare-btn">compare</button>
 </div>
+<div id="menu-selected-services" class="selected-services"></div>
 
     <!-- Menu sections -->
     <section class="menu-section">
