--- a/store-it-safely.html
+++ b/store-it-safely.html
@@ -41,10 +41,11 @@
     <input type="text" placeholder="Search..." id="menu-search" />
     <div id="search-suggestions" class="search-suggestions"></div>
   </div>
-  <button id="menu-compare-btn" class="compare-btn">compare</button>
+    <button id="menu-compare-btn" class="compare-btn">compare</button>
 </div>
+<div id="menu-selected-services" class="selected-services"></div>
 
-		<!-- Menu sections -->
+    <!-- Menu sections -->
 		<section class="menu-section">
       <ul>
         <div class="custom-dropdown">
