--- a/river.html
+++ b/river.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Compare Bitcoin Services</title>
-  <meta name="description" content="Side-by-side comparison of Bitcoin services with key features and costs."/>
-  <link rel="canonical" href="https://buoybitcoin.com/compare.html"/>
+  <title>River — Review, fees & features | Buoy Bitcoin</title>
+  <meta name="description" content="River helps U.S. based customers invest in Bitcoin simply and securely with a focus on long-term saving. Unlike many platforms, River holds all Bitcoin in full…"/>
+  <link rel="canonical" href="https://buoybitcoin.com/river.html"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://buoybitcoin.com/compare.html"/>
-  <meta property="og:title" content="Compare Bitcoin Services"/>
-  <meta property="og:description" content="Side-by-side comparison of Bitcoin services with key features and costs."/>
+  <meta property="og:url" content="https://buoybitcoin.com/river.html"/>
+  <meta property="og:title" content="River — Review, fees & features | Buoy Bitcoin"/>
+  <meta property="og:description" content="River helps U.S. based customers invest in Bitcoin simply and securely with a focus on long-term saving. Unlike many platforms, River holds all Bitcoin in full…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
-  <meta name="robots" content="noindex,follow">
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Compare Bitcoin Services"/>
-  <meta name="twitter:description" content="Side-by-side comparison of Bitcoin services with key features and costs."/>
+  <meta name="twitter:title" content="River — Review, fees & features | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="River helps U.S. based customers invest in Bitcoin simply and securely with a focus on long-term saving. Unlike many platforms, River holds all Bitcoin in full…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="css/styles.css">
@@ -22,7 +21,27 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
   <script defer src="https://feedback.fish/ff.js?pid=17f299e6843396" crossorigin="anonymous"></script>
   <script defer src="https://cloud.umami.is/script.js" data-website-id="0895676a-bb0e-488d-9381-a27cf9cf5888"></script>
-</head>
+
+<script>
+(function(){
+  try {
+    var svc  = "River";
+    var slug = "river";
+    var p = new URLSearchParams(location.search);
+
+    // set the common keys your JS might read
+    if (!p.get('services')) p.set('services', svc);
+    if (!p.get('service'))  p.set('service',  svc);
+    if (!p.get('name'))     p.set('name',     svc);
+    if (!p.get('slug'))     p.set('slug',     slug);
+
+    history.replaceState(null, '', location.pathname + '?' + p.toString());
+    window.__BUOY_SERVICE__ = svc;
+    window.__BUOY_SLUG__ = slug;
+  } catch (e) {}
+})();
+</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"River — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/river.html","description":"River helps U.S. based customers invest in Bitcoin simply and securely with a focus on long-term saving. Unlike many platforms, River holds all Bitcoin in full…","about":{"@type":"Organization","name":"River","url":"https://river.com"}}</script></head>
 <body>
   <div class="container">
  <header>
@@ -98,17 +117,18 @@
 </header>
  <main>
   <div class="category-header">
-    <h2 id="category-title">Compare Services</h2>
+    <h2 id="category-title">River</h2>
   </div>
-<!-- BUILD:START -->
+  <!-- BUILD:START -->
+
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container"></div>
   </div>
   <div id="comparison-table-wrapper"></div>
 </div>
-<!-- BUILD:END -->
 
+<!-- BUILD:END -->
 
 
 <!-- Rating Modal -->
@@ -144,6 +164,7 @@
       <ul>
         <li><a href="what-is-bitcoin.html">Bitcoin</a></li>
         <li><a href="what-is-lightning.html">Lightning</a></li>
+  
       </ul>
     </div>
     <div class="footer-column">
