--- a/service.html
+++ b/service.html
@@ -99,12 +99,14 @@
   <div class="category-header">
     <h2 id="category-title">Compare Services</h2>
   </div>
+  <!-- BUILD:START -->
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container"></div>
   </div>
   <div id="comparison-table-wrapper"></div>
 </div>
+<!-- BUILD:END -->
 
 
 <!-- Rating Modal -->
