SEO: index.html increase amount words

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
   </div>
 </section>
 
+
 <main>
     <!-- Buy Bitcoin Section -->
     <section class="category">
@@ -212,9 +213,100 @@
   </main>
 </div>  <!-- container -->
 
+<section class="seo-copy space" id="how-it-works">
+  <h2>Compare Bitcoin services — wallets, on-ramps, merchant tools, nodes</h2>
+
+  <div class="seo-intro">
+    <p>Buoy helps you find reliable Bitcoin wallets, on-ramps, merchant tools, and nodes—without the noise. Search a service, tap <em>Compare</em>, and review what actually matters: custody model (non-custodial, collaborative, or custodial), fees, KYC, Lightning support, and availability where you live.</p>
+    <p>We’re Bitcoin-only and independent. No paid placements; if we ever use referral links, they’ll be labeled. Our mission is to make it effortless for newcomers to choose safe, practical Bitcoin tools and move toward self-sovereignty.</p>
+    <p>How it works: we auto-detect your country to show services available in your jurisdiction. If detection isn’t possible, use the country selector in the menu. Add up to <strong>2</strong> services on mobile or <strong>3</strong> on desktop to compare side-by-side.</p>
+    <p>Ready to start? Compare by category:
+      <a href="compare.html?category=Buy">Buy</a>,
+      <a href="compare.html?category=Spend">Spend</a>,
+      <a href="compare.html?category=Store">Store</a>,
+      <a href="compare.html?category=Merchant">Merchant</a>,
+      <a href="compare.html?category=Node">Node</a>.
+      Or read our guides:
+      <a href="what-is-bitcoin.html">What is Bitcoin?</a> and
+      <a href="what-is-lightning.html">What is Lightning?</a>.
+    </p>
+  </div>
+
+  <div class="seo-slab seo-why">
+    <div class="inner">
+      <h3>Why Buoy?</h3>
+      <div class="usps">
+        <article class="usp">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M12 3l7 3v5c0 5-3.5 8-7 10-3.5-2-7-5-7-10V6l7-3z"/><path d="M9.5 12.5l2 2 3.5-3.5"/></svg>
+          <div>
+            <h4>Independent</h4>
+            <p>No paid placements. Any referral support is clearly disclosed.</p>
+          </div>
+        </article>
+
+        <article class="usp">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="9"/><path d="M3 12h18"/><path d="M12 3a15 15 0 010 18M12 3a15 15 0 000 18"/></svg>
+          <div>
+            <h4>Available where you are</h4>
+            <p>We auto-detect your country and show availability per service. Switch manually if needed.</p>
+          </div>
+        </article>
+
+        <article class="usp">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <circle cx="12" cy="12" r="9"/>
+            <path d="M10 7v10M14 7v10M8 9h8M8 15h8"/>
+          </svg>
+          <div>
+            <h4>Bitcoin-only</h4>
+            <p>Focused guidance—no altcoin listings, minimal distractions.</p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </div>
+
+  <div class="seo-slab seo-faq">
+    <div class="inner">
+      <h3>FAQs</h3>
+      <div class="faq-list">
+        <p><strong>How many services can I compare?</strong> Up to 2 on mobile and up to 3 on desktop.</p>
+        <p><strong>How do you decide what to show?</strong> We filter by your country and highlight Bitcoin-only tools with clear custody models and Lightning support.</p>
+        <p><strong>Are you independent?</strong> Yes. We don’t sell rankings. If a link supports us, we label it.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"FAQPage",
+  "mainEntity":[
+    {
+      "@type":"Question",
+      "name":"How many services can I compare?",
+      "acceptedAnswer":{"@type":"Answer","text":"You can compare up to 2 services on mobile and up to 3 on desktop."}
+    },
+    {
+      "@type":"Question",
+      "name":"How do you decide what to show?",
+      "acceptedAnswer":{"@type":"Answer","text":"We auto-detect your country to show services available in your jurisdiction and prioritize Bitcoin-only tools with clear custody models and Lightning support."}
+    },
+    {
+      "@type":"Question",
+      "name":"Are you independent?",
+      "acceptedAnswer":{"@type":"Answer","text":"Yes. We do not sell rankings. If a link supports us via referral, we disclose it."}
+    }
+  ]
+}
+</script>
+
+
 <footer>
   <div class="newsletter-signup">
-    <h3>Get Bitcoin updates and tips in your inbox every month.</h3>
+    <h3>Get new Bitcoin services and tips in your inbox every month.</h3>
     <form id="newsletter-form">
       <input type="email" id="newsletter-email" name="email" placeholder="you@your-email.com" required>
       <button type="submit">Subscribe →</button>
