Static brand pages in services folder with one source of truth

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
   <div class="seo-intro">
     <p>Buoy helps you find reliable Bitcoin wallets, on-ramps, merchant tools, and nodes—without the noise. Search a service, tap <em>Compare</em>, and review what actually matters: custody model (non-custodial, collaborative, or custodial), fees, KYC, Lightning support, and availability where you live.</p>
-    <p>We’re Bitcoin-only and independent. No paid placements; if we ever use referral links, they’ll be labeled. Our mission is to make it effortless for newcomers to choose safe, practical Bitcoin tools and move toward self-sovereignty.</p>
+    <p>We’re Bitcoin-only and independent. No paid placements; it's value for value only. Our mission is to make it effortless for newcomers to choose safe, practical Bitcoin tools and move toward self-sovereignty.</p>
     <p>How it works: we auto-detect your country to show services available in your jurisdiction. If detection isn’t possible, use the country selector in the menu. Add up to <strong>2</strong> services on mobile or <strong>3</strong> on desktop to compare side-by-side.</p>
     <p>Ready to start? Compare by category:
       <a href="compare.html?category=Buy">Buy</a>,
@@ -272,7 +272,7 @@
       <div class="faq-list">
         <p><strong>How many services can I compare?</strong> Up to 2 on mobile and up to 3 on desktop.</p>
         <p><strong>How do you decide what to show?</strong> We filter by your country and highlight Bitcoin-only tools with clear custody models and Lightning support.</p>
-        <p><strong>Are you independent?</strong> Yes. We don’t sell rankings. If a link supports us, we label it.</p>
+        <p><strong>Are you independent?</strong> Yes. We don’t sell rankings.</p>
       </div>
     </div>
   </div>
