--- a/service.html
+++ b/service.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compare Bitcoin Services - Find the best options for your needs</title>
@@ -16,7 +17,7 @@
   <meta name="twitter:description" content="Compare Bitcoin services and find the best options for your needs."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css?v=9">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
   <script defer src="https://feedback.fish/ff.js?pid=17f299e6843396" crossorigin="anonymous"></script>
@@ -26,7 +27,7 @@
   <div class="container">
  <header>
   <div class="container">
-    <div id="logo"><a href="/"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
+    <div id="logo"><a href="/"><img src="/images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
@@ -50,7 +51,7 @@
       <ul>
         <div class="custom-dropdown">
           <div class="dropdown-label" id="dropdown-label">
-            <img src="images/global-white.svg" alt="Your Location" class="availability-icon" />
+            <img src="/images/global-white.svg" alt="Your Location" class="availability-icon" />
             <span>Your location</span>
           </div>
           <input type="text" id="country-search" placeholder="Type your country..." style="display:none;" />
@@ -59,32 +60,32 @@
 
 		  
         <li>
-          <a href="about.html">
-            <img src="images/about.svg" alt="About Icon" />
+          <a href="/about.html">
+            <img src="/images/about.svg" alt="About Icon" />
             About
           </a>
         </li>
         <li>
-  <a href="faq.html">
-    <img src="images/faq.svg" alt="FAQ Icon" />
+  <a href="/faq.html">
+    <img src="/images/faq.svg" alt="FAQ Icon" />
     FAQ
   </a>
 </li>
 <li>
   <a href="#donate" id="donate-link">
-    <img src="images/lightning.svg" alt="Donate Icon" />
+    <img src="/images/lightning.svg" alt="Donate Icon" />
     Donate
   </a>
 </li>
 <li>
   <a data-feedback-fish href="javascript:void(0)">
-    <img src="images/feedback.svg" alt="Feedback Icon" />
+    <img src="/images/feedback.svg" alt="Feedback Icon" />
     Give us feedback
   </a>
 </li>
 <li>
   <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
-    <img src="images/contact.svg" alt="Contact Icon"/>
+    <img src="/images/contact.svg" alt="Contact Icon"/>
     Contact
   </a>
 </li>
@@ -140,8 +141,8 @@
     <div class="footer-column">
       <h3>Learn</h3>
       <ul>
-        <li><a href="what-is-bitcoin.html">Bitcoin</a></li>
-        <li><a href="what-is-lightning.html">Lightning</a></li>
+        <li><a href="/what-is-bitcoin.html">Bitcoin</a></li>
+        <li><a href="/what-is-lightning.html">Lightning</a></li>
   
       </ul>
     </div>
@@ -149,17 +150,17 @@
       <h3>Support</h3>
       <ul>
         <li><a href="mailto:support&#64;buoybitcoin.com">Contact</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-        <li><a href="terms.html">Terms of Service</a></li>
+        <li><a href="/faq.html">FAQ</a></li>
+        <li><a href="/privacy.html">Privacy</a></li>
+        <li><a href="/terms.html">Terms of Service</a></li>
       </ul>
     </div>
     <!-- Add more columns here if needed -->
   </div>
 </footer>
 
-  <script src="js/script.js"></script>
-  <script src="js/compare.js"></script>
+  <script defer src="/js/script.js?v=9"></script>
+  <script defer src="/js/compare.js?v=9"></script>
 </body>
 </html>
 
