--- a/services/bull-bitcoin.html
+++ b/services/bull-bitcoin.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OpenNode — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted…"/>
-  <link rel="canonical" href="https://buoybitcoin.com/opennode.html"/>
+  <title>Bull Bitcoin — Review, fees & features | Buoy Bitcoin</title>
+  <meta name="description" content="Bull Bitcoin is a Canadian Bitcoin exchange that stands out by being entirely non-custodial, meaning users must provide their own wallet and take full ownershi…"/>
+  <link rel="canonical" href="https://buoybitcoin.com/services/bull-bitcoin.html"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://buoybitcoin.com/opennode.html"/>
-  <meta property="og:title" content="OpenNode — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted…"/>
+  <meta property="og:url" content="https://buoybitcoin.com/services/bull-bitcoin.html"/>
+  <meta property="og:title" content="Bull Bitcoin — Review, fees & features | Buoy Bitcoin"/>
+  <meta property="og:description" content="Bull Bitcoin is a Canadian Bitcoin exchange that stands out by being entirely non-custodial, meaning users must provide their own wallet and take full ownershi…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="OpenNode — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted…"/>
+  <meta name="twitter:title" content="Bull Bitcoin — Review, fees & features | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Bull Bitcoin is a Canadian Bitcoin exchange that stands out by being entirely non-custodial, meaning users must provide their own wallet and take full ownershi…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css?v=9">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
   <script defer src="https://feedback.fish/ff.js?pid=17f299e6843396" crossorigin="anonymous"></script>
@@ -25,8 +26,8 @@
 <script>
 (function(){
   try {
-    var svc  = "OpenNode";
-    var slug = "opennode";
+    var svc  = "Bull Bitcoin";
+    var slug = "bull-bitcoin";
     var p = new URLSearchParams(location.search);
 
     // set the common keys your JS might read
@@ -38,15 +39,16 @@
     history.replaceState(null, '', location.pathname + '?' + p.toString());
     window.__BUOY_SERVICE__ = svc;
     window.__BUOY_SLUG__ = slug;
+    window.__BUOY_SINGLE__ = true;
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"OpenNode — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/opennode.html","description":"OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted…","about":{"@type":"Organization","name":"OpenNode","url":"https://opennode.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Bull Bitcoin — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html","description":"Bull Bitcoin is a Canadian Bitcoin exchange that stands out by being entirely non-custodial, meaning users must provide their own wallet and take full ownershi…","about":{"@type":"Organization","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com"}}</script></head>
 <body>
   <div class="container">
  <header>
   <div class="container">
-    <div id="logo"><a href="/"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
+    <div id="logo"><a href="/"><img src="/images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
@@ -70,7 +72,7 @@
       <ul>
         <div class="custom-dropdown">
           <div class="dropdown-label" id="dropdown-label">
-            <img src="images/global-white.svg" alt="Your Location" class="availability-icon" />
+            <img src="/images/global-white.svg" alt="Your Location" class="availability-icon" />
             <span>Your location</span>
           </div>
           <input type="text" id="country-search" placeholder="Type your country..." style="display:none;" />
@@ -79,32 +81,32 @@
 
 		  
         <li>
-          <a href="about.html">
-            <img src="images/about.svg" alt="About Icon" />
+          <a href="/about.html">
+            <img src="/images/about.svg" alt="About Icon" />
             About
           </a>
         </li>
         <li>
-  <a href="faq.html">
-    <img src="images/faq.svg" alt="FAQ Icon" />
+  <a href="/faq.html">
+    <img src="/images/faq.svg" alt="FAQ Icon" />
     FAQ
   </a>
 </li>
 <li>
   <a href="#donate" id="donate-link">
-    <img src="images/lightning.svg" alt="Donate Icon" />
+    <img src="/images/lightning.svg" alt="Donate Icon" />
     Donate
   </a>
 </li>
 <li>
   <a data-feedback-fish href="javascript:void(0)">
-    <img src="images/feedback.svg" alt="Feedback Icon" />
+    <img src="/images/feedback.svg" alt="Feedback Icon" />
     Give us feedback
   </a>
 </li>
 <li>
   <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
-    <img src="images/contact.svg" alt="Contact Icon"/>
+    <img src="/images/contact.svg" alt="Contact Icon"/>
     Contact
   </a>
 </li>
@@ -117,7 +119,7 @@
 </header>
  <main>
   <div class="category-header">
-    <h2 id="category-title">OpenNode</h2>
+    <h2 id="category-title">Buy Bitcoin</h2>
   </div>
   <!-- BUILD:START -->
 
@@ -162,8 +164,8 @@
     <div class="footer-column">
       <h3>Learn</h3>
       <ul>
-        <li><a href="what-is-bitcoin.html">Bitcoin</a></li>
-        <li><a href="what-is-lightning.html">Lightning</a></li>
+        <li><a href="/what-is-bitcoin.html">Bitcoin</a></li>
+        <li><a href="/what-is-lightning.html">Lightning</a></li>
   
       </ul>
     </div>
@@ -171,17 +173,17 @@
       <h3>Support</h3>
       <ul>
         <li><a href="mailto:support&#64;buoybitcoin.com">Contact</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-        <li><a href="terms.html">Terms of Service</a></li>
+        <li><a href="/faq.html">FAQ</a></li>
+        <li><a href="/privacy.html">Privacy</a></li>
+        <li><a href="/terms.html">Terms of Service</a></li>
       </ul>
     </div>
     <!-- Add more columns here if needed -->
   </div>
 </footer>
 
-  <script src="js/script.js"></script>
-  <script src="js/compare.js"></script>
+  <script defer src="/js/script.js?v=9"></script>
+  <script defer src="/js/compare.js?v=9"></script>
 </body>
 </html>
 
